# llm_careeragent

./: .gitignore  README.md  pyproject.toml
1_foundations/: careerAgent.py  lab1.ipynb  lab3.ipynb  lab4.ipynb
1_foundations/me/: summary.txt
