[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ml-agents"
version = "0.1.0"
description = "Generate Python code using AI agents using generative AI models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv",
    "openai",
    "PyPDF2",
    "gradio"

]

[tool.setuptools]
package-dir = { "" = "src" }